// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BTSL parser corpus > examples-multisig-2-of-2.btsl matches snapshot 1`] = `
{
  "document": {
    "consts": [],
    "schemas": [
      {
        "asserts": [
          {
            "condition": "change_amount >= DUST_LIMIT",
            "index": 0,
            "source": "0: change_amount >= DUST_LIMIT",
          },
        ],
        "calc": [
          {
            "expression": "vSize(CURRENT_PSBT) * @FEE_RATE",
            "variable": "fees",
          },
          {
            "expression": "REF(@MULTISIG_UTXO.amount) - 50000 - fees",
            "variable": "change_amount",
          },
        ],
        "inputs": [
          {
            "index": 0,
            "scriptDef": "MULTISIG_2_2",
            "type": "UNLOCK_P2WSH",
            "utxoRef": "@MULTISIG_UTXO",
            "witnessData": {
              "DUMMY": "<empty>",
              "SIG1": "<SIGN_WITH(@KEY1)>",
              "SIG2": "<SIGN_WITH(@KEY2)>",
            },
          },
        ],
        "name": "MULTISIG_SPEND",
        "outputs": [
          {
            "address": "@DEST",
            "amount": 50000,
            "amountIsParam": false,
            "index": 0,
            "type": "ADDRESS",
          },
          {
            "address": "@MULTISIG_UTXO.address",
            "amountVar": "change_amount",
            "index": 1,
            "type": "CHANGE",
          },
        ],
        "params": [
          {
            "name": "MULTISIG_UTXO",
            "type": "UTXO",
          },
          {
            "name": "DEST",
            "type": "ADDRESS",
          },
          {
            "name": "FEE_RATE",
            "type": "FEERATE",
          },
          {
            "name": "KEY1",
            "type": "HEX_DATA",
          },
          {
            "name": "KEY2",
            "type": "HEX_DATA",
          },
        ],
      },
    ],
    "scriptDefs": [
      {
        "asm": [
          "OP_2",
          "<pubkey(PK1)>",
          "<pubkey(PK2)>",
          "OP_2",
          "OP_CHECKMULTISIG",
        ],
        "name": "MULTISIG_2_2",
        "type": "P2WSH",
      },
    ],
    "version": 1,
  },
  "errors": [],
  "params": [
    {
      "name": "MULTISIG_UTXO",
      "type": "UTXO",
    },
    {
      "name": "DEST",
      "type": "ADDRESS",
    },
    {
      "name": "FEE_RATE",
      "type": "FEERATE",
    },
    {
      "name": "KEY1",
      "type": "HEX_DATA",
    },
    {
      "name": "KEY2",
      "type": "HEX_DATA",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`BTSL parser corpus > examples-op-return-deploy.btsl matches snapshot 1`] = `
{
  "document": {
    "consts": [
      {
        "name": "DUST_LIMIT",
        "value": 546,
      },
    ],
    "schemas": [
      {
        "asserts": [
          {
            "condition": "change_amount >= DUST_LIMIT",
            "index": 0,
            "source": "0: change_amount >= DUST_LIMIT",
          },
        ],
        "calc": [
          {
            "expression": "vSize(CURRENT_PSBT) * @FEE_RATE",
            "variable": "fees",
          },
          {
            "expression": "REF(@USER.amount) - fees",
            "variable": "change_amount",
          },
        ],
        "inputs": [
          {
            "index": 0,
            "type": "NATIVE_P2WPKH",
            "utxoRef": "@USER",
          },
        ],
        "name": "OP_RETURN_DEPLOY",
        "outputs": [
          {
            "index": 0,
            "payload": "@PAYLOAD",
            "type": "OP_RETURN",
          },
          {
            "address": "@USER.address",
            "amountVar": "change_amount",
            "index": 1,
            "type": "CHANGE",
          },
        ],
        "params": [
          {
            "name": "USER",
            "type": "UTXO",
          },
          {
            "name": "PAYLOAD",
            "type": "HEX_DATA",
          },
          {
            "name": "FEE_RATE",
            "type": "FEERATE",
          },
        ],
      },
    ],
    "scriptDefs": [],
    "version": 1,
  },
  "errors": [],
  "params": [
    {
      "name": "USER",
      "type": "UTXO",
    },
    {
      "name": "PAYLOAD",
      "type": "HEX_DATA",
    },
    {
      "name": "FEE_RATE",
      "type": "FEERATE",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`BTSL parser corpus > examples-single-key-from-pubkey.btsl matches snapshot 1`] = `
{
  "document": {
    "consts": [
      {
        "name": "DUST_LIMIT",
        "value": 330,
      },
    ],
    "schemas": [
      {
        "asserts": [
          {
            "condition": "change_amount >= DUST_LIMIT",
            "index": 0,
            "source": "0: change_amount >= DUST_LIMIT",
          },
        ],
        "calc": [
          {
            "expression": "vSize(CURRENT_PSBT) * @FEE_RATE",
            "variable": "fees",
          },
          {
            "expression": "selected_utxo.amount - AMOUNT - fees",
            "variable": "change_amount",
          },
        ],
        "consts": [
          {
            "name": "PAYMENT_ADDRESS",
            "value": "bc1pw05kccyprc9uk0l32zaegva2rh68c6ra08n6zuhwzjsyapqhusss59usvt",
          },
          {
            "name": "AMOUNT",
            "value": 10000,
          },
        ],
        "inputs": [
          {
            "fromRef": "@PUBKEY",
            "index": 0,
            "type": "NATIVE_P2WPKH",
            "utxoAlias": "selected_utxo",
            "utxoRef": "selected_utxo",
          },
        ],
        "name": "PUBKEY_SPEND",
        "outputs": [
          {
            "address": "PAYMENT_ADDRESS",
            "amountIsParam": false,
            "amountVar": "AMOUNT",
            "index": 0,
            "type": "ADDRESS",
          },
          {
            "address": "selected_utxo.address",
            "amountVar": "change_amount",
            "index": 1,
            "type": "CHANGE",
          },
        ],
        "params": [
          {
            "name": "PUBKEY",
            "type": "PUBKEY",
          },
          {
            "name": "FEE_RATE",
            "type": "FEERATE",
          },
        ],
      },
    ],
    "scriptDefs": [],
    "version": 1,
  },
  "errors": [],
  "params": [
    {
      "name": "PUBKEY",
      "type": "PUBKEY",
    },
    {
      "name": "FEE_RATE",
      "type": "FEERATE",
    },
    {
      "name": "selected_utxo",
      "type": "UTXO",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`BTSL parser corpus > examples-timelocked-vault.btsl matches snapshot 1`] = `
{
  "document": {
    "consts": [],
    "schemas": [
      {
        "asserts": [
          {
            "condition": "change_amount >= DUST_LIMIT",
            "index": 0,
            "source": "0: change_amount >= DUST_LIMIT",
          },
        ],
        "calc": [
          {
            "expression": "vSize(CURRENT_PSBT) * @FEE_RATE",
            "variable": "fees",
          },
          {
            "expression": "REF(@FUNDING_UTXO.amount) - 100000 - fees",
            "variable": "change_amount",
          },
        ],
        "inputs": [
          {
            "index": 0,
            "type": "NATIVE_P2WPKH",
            "utxoRef": "@FUNDING_UTXO",
          },
        ],
        "name": "VAULT_DEPOSIT",
        "outputs": [
          {
            "amount": 100000,
            "index": 0,
            "scriptDef": "VAULT_P2TR",
            "scriptParams": {
              "USER_PK": "@KEY_PUB",
            },
            "type": "SCRIPT",
          },
          {
            "address": "@FUNDING_UTXO.address",
            "amountVar": "change_amount",
            "index": 1,
            "type": "CHANGE",
          },
        ],
        "params": [
          {
            "name": "FUNDING_UTXO",
            "type": "UTXO",
          },
          {
            "name": "FEE_RATE",
            "type": "FEERATE",
          },
          {
            "name": "KEY_PUB",
            "type": "HEX_DATA",
          },
          {
            "name": "USER_ADDR",
            "type": "ADDRESS",
          },
          {
            "name": "USER_KEY",
            "type": "HEX_DATA",
          },
        ],
      },
      {
        "asserts": [
          {
            "condition": "final_payout > DUST_LIMIT",
            "index": 0,
            "source": "0: final_payout > DUST_LIMIT",
          },
        ],
        "calc": [
          {
            "expression": "vSize(CURRENT_PSBT) * @FEE_RATE",
            "variable": "fees",
          },
          {
            "expression": "REF(VAULT_DEPOSIT:0.amount) - fees",
            "variable": "final_payout",
          },
        ],
        "inputs": [
          {
            "index": 0,
            "scriptDef": "VAULT_P2TR",
            "scriptParams": {
              "USER_PK": "@KEY_PUB",
            },
            "scriptPath": "unlock_path",
            "sequence": 100,
            "type": "UNLOCK_P2TR_SCRIPT",
            "utxoRef": "@WF_VAULT_DEPOSIT_0_0",
            "witnessData": {
              "SIG1": "<SIGN_WITH(@USER_KEY)>",
            },
            "workflowRef": {
              "outputIndex": 0,
              "schemaName": "VAULT_DEPOSIT",
              "vout": 0,
            },
          },
        ],
        "name": "VAULT_UNLOCK",
        "options": {
          "dependsOn": "VAULT_DEPOSIT",
        },
        "outputs": [
          {
            "address": "@USER_ADDR",
            "amountIsParam": false,
            "amountVar": "final_payout",
            "index": 0,
            "type": "ADDRESS",
          },
        ],
        "params": [
          {
            "name": "USER_ADDR",
            "type": "ADDRESS",
          },
          {
            "name": "FEE_RATE",
            "type": "FEERATE",
          },
          {
            "name": "USER_KEY",
            "type": "HEX_DATA",
          },
          {
            "name": "KEY_PUB",
            "type": "HEX_DATA",
          },
        ],
      },
    ],
    "scriptDefs": [
      {
        "internalKey": "NUMS_KEY",
        "name": "VAULT_P2TR",
        "paths": [
          {
            "asm": [
              "100",
              "OP_CSV",
              "OP_DROP",
              "OP_CHECKSIG",
            ],
            "leafVersion": 192,
            "name": "unlock_path",
            "witness": [],
          },
        ],
        "type": "P2TR",
      },
    ],
    "version": 1,
  },
  "errors": [],
  "params": [
    {
      "name": "FUNDING_UTXO",
      "type": "UTXO",
    },
    {
      "name": "FEE_RATE",
      "type": "FEERATE",
    },
    {
      "name": "KEY_PUB",
      "type": "HEX_DATA",
    },
    {
      "name": "USER_ADDR",
      "type": "ADDRESS",
    },
    {
      "name": "USER_KEY",
      "type": "HEX_DATA",
    },
    {
      "name": "WF_VAULT_DEPOSIT_0_0",
      "type": "UTXO",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`BTSL parser corpus > examples-tri-count-shared-payment.btsl matches snapshot 1`] = `
{
  "document": {
    "consts": [
      {
        "name": "DUST_LIMIT",
        "value": 546,
      },
    ],
    "schemas": [
      {
        "asserts": [
          {
            "condition": "c_bob >= DUST_LIMIT",
            "index": 0,
            "source": "0: c_bob >= DUST_LIMIT",
          },
          {
            "condition": "c_caro >= DUST_LIMIT",
            "index": 1,
            "source": "1: c_caro >= DUST_LIMIT",
          },
          {
            "condition": "payment > 0",
            "index": 2,
            "source": "2: payment > 0",
          },
          {
            "condition": "REF(@BOB_UTXO.amount) >= (@MEAN - @A2) + (fees / 2)",
            "index": 3,
            "source": "3: REF(@BOB_UTXO.amount) >= (@MEAN - @A2) + (fees / 2)",
          },
          {
            "condition": "REF(@CARO_UTXO.amount) >= (@MEAN - @A3) + (fees / 2)",
            "index": 4,
            "source": "4: REF(@CARO_UTXO.amount) >= (@MEAN - @A3) + (fees / 2)",
          },
        ],
        "calc": [
          {
            "expression": "(2 * @MEAN) - @A2 - @A3",
            "variable": "payment",
          },
          {
            "expression": "vSize(CURRENT_PSBT) * @FEE_RATE",
            "variable": "fees_btc",
          },
          {
            "expression": "@MAKER_FEE + fees_btc",
            "variable": "fees",
          },
          {
            "expression": "@MAKER_FEE",
            "variable": "maker_fee_val",
          },
          {
            "expression": "REF(@BOB_UTXO.amount) - (@MEAN - @A2) - (fees / 2)",
            "variable": "c_bob",
          },
          {
            "expression": "REF(@CARO_UTXO.amount) - (@MEAN - @A3) - (fees / 2)",
            "variable": "c_caro",
          },
        ],
        "inputs": [],
        "name": "TRICOUNT",
        "outputs": [
          {
            "address": "@ALICE_ADDRESS",
            "amountIsParam": false,
            "amountVar": "payment",
            "index": 0,
            "type": "ADDRESS",
          },
          {
            "address": "@BOB_UTXO.address",
            "amountVar": "c_bob",
            "index": 1,
            "type": "CHANGE",
          },
          {
            "address": "@CARO_UTXO.address",
            "amountVar": "c_caro",
            "index": 2,
            "type": "CHANGE",
          },
          {
            "address": "@MAKER_ADDRESS",
            "amountIsParam": false,
            "amountVar": "maker_fee_val",
            "index": 3,
            "type": "ADDRESS",
          },
        ],
        "params": [
          {
            "name": "BOB_UTXO",
            "type": "UTXO",
          },
          {
            "name": "CARO_UTXO",
            "type": "UTXO",
          },
          {
            "name": "ALICE_ADDRESS",
            "type": "ADDRESS",
          },
          {
            "name": "MAKER_ADDRESS",
            "type": "ADDRESS",
          },
          {
            "name": "FEE_RATE",
            "type": "FEERATE",
          },
          {
            "name": "MAKER_FEE",
            "type": "SATOSHI",
          },
          {
            "name": "MEAN",
            "type": "SATOSHI",
          },
          {
            "name": "A2",
            "type": "SATOSHI",
          },
          {
            "name": "A3",
            "type": "SATOSHI",
          },
        ],
      },
    ],
    "scriptDefs": [],
    "version": 1,
  },
  "errors": [],
  "params": [
    {
      "name": "BOB_UTXO",
      "type": "UTXO",
    },
    {
      "name": "CARO_UTXO",
      "type": "UTXO",
    },
    {
      "name": "ALICE_ADDRESS",
      "type": "ADDRESS",
    },
    {
      "name": "MAKER_ADDRESS",
      "type": "ADDRESS",
    },
    {
      "name": "FEE_RATE",
      "type": "FEERATE",
    },
    {
      "name": "MAKER_FEE",
      "type": "SATOSHI",
    },
    {
      "name": "MEAN",
      "type": "SATOSHI",
    },
    {
      "name": "A2",
      "type": "SATOSHI",
    },
    {
      "name": "A3",
      "type": "SATOSHI",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`BTSL parser corpus > invalid-no-schema.btsl matches snapshot 1`] = `
{
  "errors": [
    {
      "code": "BTSL_ERR_00",
      "line": 1,
      "message": "At least one PSBT_SCHEMA is required",
    },
  ],
  "params": [],
  "success": false,
  "warnings": [],
}
`;
